Fix shadows being clipped on table boundaries

--- a/src/view/content/styles.scss
+++ b/src/view/content/styles.scss
@@ -338,7 +338,7 @@ input[type="checkbox"] {
 
 .tableWrapper {
   padding: 1rem 0;
-  overflow-x: auto;
+  overflow-x: visible;
 }
 
 .resize-cursor {
